refactor the prices page, added images, made responsive for mobile, tablet

--- a/prices.html
+++ b/prices.html
@@ -74,27 +74,25 @@
         </div>
     </section>
 
-    <section class="section-features js--section-features" id="features">
+    <section class="section-prices js--section-features" id="features">
         <div class="row">
             <h2>Acessórios para unhas</h2>
             <b>
                 <p class="long-copy">
                     Utilizamos materiais de qualidade e aconselharemos o melhor comprimento e formato para se adequar ao
-                    seu estilo de vida. Se você gosta de algo diferente, recomendamos um acabamento de unha criativo
+                    seu estilo de vida.<br>
+                    Se você gosta de algo diferente, recomendamos um acabamento de unha criativo
                     para ocasiões especiais.
                 </p>
             </b>
             <h2>Lista de Preços</h2>
-            <b>
-                <p class="long-copy">
-                    Extensões de gel ou acrílico
-                </p>
-            </b>
 
             <div class="row">
                 <div class="col span-1-of-2 box">
-                    <img src="resources/img/nail-ext.png" alt="frontPicture">
-                    <h3>Extensões de gel ou acrílico</h3>
+                    <div class="price-img">
+                        <img src="resources/img/nailsext.jpg" alt="frontPicture" class="center">
+                    </div>
+                    <h2>Extensões de gel ou acrílico</h2>
                     <b>
                         <p class="long-copy">
                             As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural
@@ -106,38 +104,22 @@
                         </p>
                     </b>
                     <p class="long-copy">
-                    <ul>
-                        <li>
-                            Conjunto completo de unhas acrílicas (coloridas) £ 36,00
-                        </li>
-                        <li>
-                            Conjunto completo de unhas de gel £ 35,00
-                        </li>
-                        <li>
-                            Corte e lixe as unhas retas e mantenha-as em local adequado, mas não use limas de metal.
-                        </li>
-                        <li>
-                            Top Coat em gel (alto brilho sobre acrílico) £ 3,50
-                        </li>
-                        <li>
-                            Sobreposição rosa ou transparente £ 20,00
-                        </li>
-                        <li>
-                            Manutenção - (colorido) £ 26,00
-                        </li>
-                        <li>
-                            Unha quebrada individual (cada) £ 3,50
-                        </li>
-                        <li>
-                            Remoção de unhas £ 10,00
-                        </li>
-                    </ul>
+                        Conjunto completo de unhas acrílicas (coloridas) £ 36,00 <br>
+                        Conjunto completo de unhas de gel £ 35,00<br>
+                        Corte e lixe as unhas retas e mantenha-as em local adequado, mas não use limas de metal.<br>
+                        Top Coat em gel (alto brilho sobre acrílico) £ 3,50<br>
+                        Sobreposição rosa ou transparente £ 20,00<br>
+                        Manutenção - (colorido) £ 26,00<br>
+                        Unha quebrada individual (cada) £ 3,50<br>
+                        Remoção de unhas £ 10,00<br>
                     </p>
                 </div>
 
                 <div class="col span-1-of-2 box">
-                    <img src="resources/img/infill.png" alt="frontPicture">
-                    <h3>Preenchimento</h3>
+                    <div class="price-img">
+                        <img src="resources/img/picture76.jpg" alt="frontPicture" class="center">
+                    </div>
+                    <h2>Preenchimento</h2>
                     <b>
                         <p class="long-copy">
                             Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a
@@ -145,111 +127,56 @@
                         </p>
                     </b>
                     <p class="long-copy">
-                    <ul>
-                        <li>
-                            Preenchimentos de acrílico por um técnico sênior £ 30
-                        </li>
-                        <li>
-                            Preenchimentos de gel duro £ 35
-                        </li>
-                        <li>
-                            Reshape / Shorten £5
-                        </li>
-                    </ul>
+                        Preenchimentos de acrílico por um técnico sênior £ 30<br>
+                        Preenchimentos de gel duro £ 35<br>
+                        Reshape / Shorten £5<br>
                     </p>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="tratamento-extra row">
                 <h2>Tratamento extras</h2>
                 <b>
-                    <p class="long-copy">
+                    <p class="x-margin-bottom-25">
                         Destaque-se na multidão adicionando algo extra às suas unhas com nossa fabulosa seleção de
                         enfeites de unhas. Escolha o mínimo ou o quanto desejar entre:
                     </p>
                 </b>
-            </div>
-            <div class="row">
+
                 <div class="col span-1-of-3 box">
                     <p class="long-copy">
-                    <ul>
-                        <li>
-                            Nail art sob medida a partir de £ 5
-                        </li>
-                        <li>
-                            Francês £ 3
-                        </li>
-                        <li>
-                            Olho de gato £ 3
-                        </li>
-                        <li>
-                            Sereia / pó brilhante £ 3
-                        </li>
-                        <li>
-                            Térmico (mudança de cor) £ 3
-                        </li>
-                        <li>
-                            Dicas extravagantes, divisas, chamas (mãos completas) £ 15
-                        </li>
-                        <li>
-                            Nail Art sob medida em um único dedo (cereja, corações etc.) £ 5 por unha
-                        </li>
-                    </ul>
+                        Nail art sob medida a partir de £ 5<br>
+                        Francês £ 3<br>
+                        Olho de gato £ 3<br>
+                        Sereia / pó brilhante £ 3<br>
+                        Térmico (mudança de cor) £ 3<br>
+                        Dicas extravagantes, divisas, chamas (mãos completas) £ 15<br>
+                        Nail Art sob medida em um único dedo (cereja, corações etc.) £ 5 por unha<br>
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
                     <p class="long-copy">
-                    <ul>
-                        <li>
-                            Chrome (2-3 unhas) £ 3
-                        </li>
-                        <li>
-                            Gemas de caviar £ 3 por unha
-                        </li>
-                        <li>
-                            Grandes joias e cristais de 50 centavos cada
-                        </li>
-                        <li>
-                            Listras £ 3 por mão
-                        </li>
-                        <li>
-                            Folhas £ 5
-                        </li>
-                        <li>
-                            Unhas encapsuladas com glitter £ 3 por unha
-                        </li>
-                        <li>
-                            Unhas encapsuladas com flores, rendas, etc. £ 5 por unha
-                        </li>
-                    </ul>
+                        Chrome (2-3 unhas) £ 3<br>
+                        Gemas de caviar £ 3 por unha<br>
+                        Grandes joias e cristais de 50 centavos cada<br>
+                        Listras £ 3 por mão<br>
+                        Folhas £ 5<br>
+                        Unhas encapsuladas com glitter £ 3 por unha<br>
+                        Unhas encapsuladas com flores, rendas, etc. £ 5 por unha<br>
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
-                    <p class="long-copy">
-                    <ul>
-                        <li>
-                            Mármore (1-2 pregos) £ 5
-                        </li>
-                        <li>
-                            Estampa de leopardo, camuflagem (1-2 unhas) £ 5
-                        </li>
-                        <li>
-                            Glitter Ombre £ 5
-                        </li>
-                        <li>
-                            Chrome (mãos completas) £ 10
-                        </li>
-                        <li>
-                            Cutículas artísticas, punhos, luas (mãos inteiras) £ 15
-                        </li>
-                        <li>
-                            O caso quebrado - Reparos únicos em acessórios danificados £ 4 por prego 3 ou mais pregos
-                            faltando serão cobrados em nosso preço de conjunto completo. Faltam 4 ou mais pregos,
-                            recomendamos um molho e um novo conjunto de reposição.
-                        </li>
-                    </ul>
+                    <p class="long-copy xxl-padding-bottom">
+                        Mármore (1-2 pregos) £ 5<br>
+                        Estampa de leopardo, camuflagem (1-2 unhas) £ 5<br>
+                        Glitter Ombre £ 5<br>
+                        Chrome (mãos completas) £ 10<br>
+                        Cutículas artísticas, punhos, luas (mãos inteiras) £ 15<br>
+                        O caso quebrado - Reparos únicos em acessórios danificados £ 4 por prego 3 ou mais pregos
+                        faltando serão cobrados em nosso preço de conjunto completo. Faltam 4 ou mais pregos,
+                        recomendamos um molho e um novo conjunto de reposição.
                     </p>
                 </div>
             </div>
