refactor the special offer page

--- a/specialoffers.html
+++ b/specialoffers.html
@@ -67,100 +67,100 @@
         </a>
     </div>
 
-    <section class="section-features js--section-features" id="features">
+    <section class="section-specialoffers section-promotion" id="features">
         <div class="row">
-            <h2>Ofertas especiais</h2>
-            <p class="long-copy">
-                Mime-se aproveitando uma das nossas ofertas;
+            <h2><strong>Ofertas especiais</strong></h2>
+            <p>
+                Mime-se aproveitando uma das nossas ofertas
             </p>
         </div>
 
         <div class="row">
-            <div class="col span-1-of-2 box">
-                <img src="resources/img/nail-ext.png" alt="frontPicture">
-                <h3>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h3>
-                <p>
-                    10% de desconto em todos os tratamentos com carteira de estudante.
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
-                <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
-                <p>
-                    Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
+            <div class="col span-1-of-2">
+                <div class="svg-img">
+                    <img src="resources/img/luxurynails.jpg" alt="frontPicture">
+                    <h3>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h3>
+                    <p class="long-copy">
+                        10% de desconto em todos os tratamentos com carteira de estudante.<br>
+                        * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                    </p>
+                    <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
+                    <p class="long-copy">
+                        Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros<br>
+                        * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                    </p>
+                </div>
             </div>
-            <div class="col span-1-of-2 box">
-                <img src="resources/img/infill.png" alt="frontPicture">
-                <h3>Tratamento completo de mãos e pez em gel ou acrilico</h3>
-                <p>
-                    Reserve um conjunto de mãos e pez em gel por £50 euros
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
-                <h3>Unhas de acrílico para estudantes</h3>
-                <p>
-                    Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por £30
-                    euros
-                    * Aplica-se apenas a alunos em tempo integral
-                </p>
+
+            <div class="col span-1-of-2">
+                <div class="svg-img">
+                    <img src="resources/img/luxurynails.jpg" alt="frontPicture">
+                    <h3>Tratamento completo de mãos e pez em gel ou acrilico</h3>
+                    <p class="long-copy">
+                        Reserve um conjunto de mãos e pez em gel por £50 euros<br>
+                        * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                    </p>
+                    <h3>Unhas de acrílico para estudantes</h3>
+                    <p class="long-copy">
+                        Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por
+                        £30 euros<br>
+                        * Aplica-se apenas a alunos em tempo integral
+                    </p>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="section-details">
-        <p>Telefone: +351 963 254 009</p>
-    </section>
-
-    <section class="section-meals">
-        <ul class="meals-showcase clearfix">
+    <section class="row section-gallery">
+        <div class="section-details">
+            <p><i class="fas fa-phone"></i> +351 963 254 009</p>
+        </div>
+        <ul class="photos-gallery clearfix">
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture76.jpg" alt="eyebrows">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails3.jpg" alt="nails3">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails4.jpg" alt="nails4">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture33.jpg" alt="nails5">
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase clearfix">
+        <ul class="photos-gallery clearfix">
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture33.jpg" alt="picture33">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
                 </figure>
             </li>
         </ul>
+        <div class="section-details xxl-margin-bottom-400"></div>
     </section>
-
-    <section class="section-details">
-        <p>Telefone: +351 963 254 009</p>
-    </section>
-
     <div id="footer"></div>
 </body>
 
