worked in the gallery page, removed unnecessary code

--- a/gallery.html
+++ b/gallery.html
@@ -67,21 +67,77 @@
         </a>
     </div>
 
-    <div class="row gallery">
-        <figure class="gallery__item gallery__item--1">
-            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
-        </figure>
-        <figure class="gallery__item gallery__item--2">
-            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
-        </figure>
-        <figure class="gallery__item gallery__item--3">
-            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
-        </figure>
-        <figure class="gallery__item gallery__item--4">
-            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
-        </figure>
-    </div>
+    <section class="row section-gallery">
+        <ul class="photos-gallery clearfix">
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture76.jpg" alt="eyebrows">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/nails3.jpg" alt="nails3">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/nails4.jpg" alt="nails4">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture33.jpg" alt="nails5">
+                </figure>
+            </li>
+        </ul>
 
+        <ul class="photos-gallery clearfix">
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture76.jpg" alt="eyebrows">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/nails4.jpg" alt="nails3">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture33.jpg" alt="nails4">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/nailsext.jpg" alt="nails5">
+                </figure>
+            </li>
+        </ul>
+
+        <ul class="photos-gallery clearfix">
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture33.jpg" alt="picture33">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="gallery-photo">
+                    <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
+                </figure>
+            </li>
+        </ul>
+        <div class="xxl-margin-bottom-400"></div>
+    </section>
     <div id="footer"></div>
 </body>
 
