worked in the contactus page, refactoring, updates for desktop view

--- a/contactus.html
+++ b/contactus.html
@@ -74,15 +74,16 @@
         </div>
     </section>
 
-    <section class="section-features js--section-features" id="features">
+    <section class="section-features xxl-margin-bottom-400" id="features">
         <div class="row">
             <h2>Contact Us</h2>
 
-            <p>R. Sebastião da Gama No 8B</p>
-            <p>2700-770 - Amadora</p>
-            <p>Portugal</p><br>
+            <p>R. Sebastião da Gama No 8B<br>
+                2700-770 - Amadora<br>
+                Portugal
+            </p><br>
             <b>
-                <p class="long-copy">
+                <p>
                     Estamos orgulhosos de servir os nossos clientes da Amadora, e Lisboa por mais 10 anos. Nosso salão
                     de beleza está situado em uma localização muito conveniente no centro da Amadora, a apenas 15
                     minutos a pé da Estação de Comboio de Amadora. Nossos experientes técnicos de unhas oferecem uma
@@ -96,27 +97,27 @@
 
             <div class="row">
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/phone.svg" alt="frontPicture">
-
-                    <h3>+351 963 254 009</h3>
-
-                    <p class="long-copy">
+                    <h3>
+                        <p><i class="fas fa-phone"></i> +351 963 254 009</p>
+                    </h3>
+                    <p>
                         Fale com um membro de nossa equipe hoje.
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/email.svg" alt="frontPicture">
-                    <h3>aidinha2001@gmail.com</h3>
-
-                    <p class="long-copy">
+                    <h3>
+                        <p><i class="fas fa-envelope"></i> aidinha2001@gmail.com</p>
+                    </h3>
+                    <p>
                         Você tem alguma pergunta? Envie um e-mail para um de nossos técnicos de unhas.
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/time-svg.svg" alt="frontPicture">
-                    <h3>Horario de funcionamento</h3>
+                    <h3>
+                        <p><i class="fas fa-clock"></i> Horario de funcionamento</p>
+                    </h3>
                     <p>Segunda as Sextas - Das 09:30 as 19:30</p>
                     <p>Sabado - Das 11:00 as 18:00</p>
                     <p>Domingo - Fechado</p>
