added the content to prices page

--- a/prices.html
+++ b/prices.html
@@ -76,110 +76,225 @@
 
     <section class="section-prices js--section-features" id="features">
         <div class="row">
-            <h2>Acessórios para unhas</h2>
+            <h2>PREÇÁRIO</h2>
             <b>
-                <p class="long-copy">
+                <p class="x-margin-bottom-25">
                     Utilizamos materiais de qualidade e aconselharemos o melhor comprimento e formato para se adequar ao
                     seu estilo de vida.<br>
-                    Se você gosta de algo diferente, recomendamos um acabamento de unha criativo
+                    Se você gosta de algo diferente, recomendamos um acabamento de unhas criativo
                     para ocasiões especiais.
                 </p>
             </b>
-            <h2>Lista de Preços</h2>
+            <strong>
+                <h3>Serviço de Unhas</h3>
+            </strong>
 
             <div class="row">
                 <div class="col span-1-of-2 box">
                     <div class="price-img">
                         <img src="resources/img/nailsext.jpg" alt="frontPicture" class="center">
                     </div>
-                    <h2>Extensões de gel ou acrílico</h2>
-                    <b>
-                        <p class="long-copy">
-                            As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural
-                            usando um gel especial de construção, pó acrílico para esculpir ou usar pontas de plástico.
-                            Inclui: tratamento de unhas e cutículas, extensão da unha, escolha da cor do gel e
-                            acabamento.
-                            Desenhos de strass (por unha) £ 2,00 Folhas para Nail Art (por unha) £ 2,00 Remoção de unhas
-                            £ 10,00 * A manutenção inclui até 2 unhas quebradas.
-                        </p>
-                    </b>
+                    <h2>MANICURE</h2>
                     <p class="long-copy">
-                        Conjunto completo de unhas acrílicas (coloridas) £ 36,00 <br>
-                        Conjunto completo de unhas de gel £ 35,00<br>
-                        Corte e lixe as unhas retas e mantenha-as em local adequado, mas não use limas de metal.<br>
-                        Top Coat em gel (alto brilho sobre acrílico) £ 3,50<br>
-                        Sobreposição rosa ou transparente £ 20,00<br>
-                        Manutenção - (colorido) £ 26,00<br>
-                        Unha quebrada individual (cada) £ 3,50<br>
-                        Remoção de unhas £ 10,00<br>
+                        MANICURE NORMAL_______________________6€<br>
+                        MANICURE FRANCESA_____________________7€<br>
+                        VERNIZ GEL_________________________________12€<br>
+                        GELINHO / CAPILAINE_____________________14€<br>
+                        BASE_________________________________________15€<br>
+                        APLICAÇÃO GEL SOBRE UNHA NATURAL____________________________________20€<br><br>
+                        APLICAÇÃO GEL EM EXTENSÃO<br>
+                        - UNHAS CURTAS___________________________25€<br>
+                        - UNHAS MÉDIAS___________________________27€<br>
+                        - UNHAS COMPRIDAS______________________30€<br><br>
+                        MANUTENÇÃO DE UNHAS DE GEL<br>
+                        - UNHAS CURTAS___________________________20€<br>
+                        - UNHAS MÉDIAS___________________________22€<br>
+                        - UNHAS COMPRIDAS______________________25€<br>
+                        BRILHO______________________________________12€<br>
+                        NAIL ART (CADA UNHA)____________________1€<br>
+                        UNHA FRANCESA / ESPANHOLA (ACRESCE)___________________________________4€<br><br>
+                        UNHAS PARTIDAS (RECONSTRUÇÃO)<br>
+                        - COM MANUTENÇÃO______________________1€<br>
+                        - SEM MANUTENÇÃO_______________________3€<br>
+                        REMOÇÃO DE VERNIZ GEL_________________6€<br>
+                        REMOÇÃO DE GELINHO____________________7€<br>
+                        REMOÇÃO DE UNHAS DE GEL____________________________________________10€<br>
+                        SPA DE MANICURE<br>
+                        (INCLUI PARAFINA / MÁSCARA)____________________________________11€<br>
                     </p>
                 </div>
 
                 <div class="col span-1-of-2 box">
                     <div class="price-img">
-                        <img src="resources/img/picture76.jpg" alt="frontPicture" class="center">
+                        <img src="resources/img/pedicuree.jpg" alt="frontPicture" class="center">
                     </div>
-                    <h2>Preenchimento</h2>
-                    <b>
-                        <p class="long-copy">
-                            Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a
-                            unha fique como nova e aplicaremos o esmalte de gel de sua escolha.
-                        </p>
-                    </b>
+                    <h2>PEDICURE</h2>
                     <p class="long-copy">
-                        Preenchimentos de acrílico por um técnico sênior £ 30<br>
-                        Preenchimentos de gel duro £ 35<br>
-                        Reshape / Shorten £5<br>
+                        PEDICURE NORMAL_______________________17€<br>
+                        PEDICURE MEDICAL_______________________25€<br>
+                        SPA DE PEDICURE<br>
+                        (INCLUI PARAFINA / MÁSCARA)___________23€<br>
+                        PINTAR AS UNHAS DOS PÉS_______________8€<br>
+                        GEL SEM PEDICURE________________________17€<br>
+                        GEL COM PEDICURE_______________________25€<br>
+                        VERNIZ GEL SEM PEDICURE_______________14€<br>
+                        VERNIZ GEL COM PEDICURE____________________________________23€<br>
                     </p>
                 </div>
             </div>
 
-            <div class="tratamento-extra row">
-                <h2>Tratamento extras</h2>
-                <b>
-                    <p class="x-margin-bottom-25">
-                        Destaque-se na multidão adicionando algo extra às suas unhas com nossa fabulosa seleção de
-                        enfeites de unhas. Escolha o mínimo ou o quanto desejar entre:
-                    </p>
-                </b>
+            <strong>
+                <h3>Serviço de Depilação</h3>
+            </strong>
 
-                <div class="col span-1-of-3 box">
+            <div class="row">
+                <div class="col span-1-of-2 box">
+                    <h2>DEPILAÇÃO</h2>
                     <p class="long-copy">
-                        Nail art sob medida a partir de £ 5<br>
-                        Francês £ 3<br>
-                        Olho de gato £ 3<br>
-                        Sereia / pó brilhante £ 3<br>
-                        Térmico (mudança de cor) £ 3<br>
-                        Dicas extravagantes, divisas, chamas (mãos completas) £ 15<br>
-                        Nail Art sob medida em um único dedo (cereja, corações etc.) £ 5 por unha<br>
+                        BUÇO__________________________________________4€<br>
+                        QUEIXO________________________________________3€<br>
+                        PATILHAS______________________________________6€<br>
+                        AXILAS_________________________________________6€<br>
+                        VARILHA CAVADA___________________________10€<br>
+                        VARILHA TOTAL______________________________12€<br>
+                        MEIA PERNA_________________________________8€<br>
+                        PERNA INTEIRA_____________________________14€<br>
+                        DESIGN DE SOMBRAÇELHAS_______________7€<br>
+                        MANUTENÇÃO DE SOMBRAÇELHAS______6€<br>
+                        DESIGN DE SOMBRAÇELHAS + HENNA___14€<br>
+                        TINTURA DE SOMBRAÇELHAS_____________7€<br>
                     </p>
                 </div>
 
-                <div class="col span-1-of-3 box">
+                <div class="col span-1-of-2 box">
+                    <h2>THREADING</h2>
                     <p class="long-copy">
-                        Chrome (2-3 unhas) £ 3<br>
-                        Gemas de caviar £ 3 por unha<br>
-                        Grandes joias e cristais de 50 centavos cada<br>
-                        Listras £ 3 por mão<br>
-                        Folhas £ 5<br>
-                        Unhas encapsuladas com glitter £ 3 por unha<br>
-                        Unhas encapsuladas com flores, rendas, etc. £ 5 por unha<br>
-                    </p>
-                </div>
-
-                <div class="col span-1-of-3 box">
-                    <p class="long-copy xxl-padding-bottom">
-                        Mármore (1-2 pregos) £ 5<br>
-                        Estampa de leopardo, camuflagem (1-2 unhas) £ 5<br>
-                        Glitter Ombre £ 5<br>
-                        Chrome (mãos completas) £ 10<br>
-                        Cutículas artísticas, punhos, luas (mãos inteiras) £ 15<br>
-                        O caso quebrado - Reparos únicos em acessórios danificados £ 4 por prego 3 ou mais pregos
-                        faltando serão cobrados em nosso preço de conjunto completo. Faltam 4 ou mais pregos,
-                        recomendamos um molho e um novo conjunto de reposição.
+                        SOMBRAÇELHAS____________________________8€<br>
+                        BUÇO_________________________________________6€<br>
+                        EXTENÇÃO DE PESTANAS__________________35€<br>
+                        MACROBLADING____________________________80€<br>
                     </p>
                 </div>
             </div>
+
+            <strong>
+                <h3>Serviço de Corpo</h3>
+            </strong>
+
+            <div class="row">
+                <div class="col span-1-of-2 box">
+                    <h2>MASSAGENS</h2>
+                    <p class="long-copy">
+                        MASSAGEM RELAXANTE <br> (60 MIN)______________________________________30€<br>
+                        MASSAGEM ANTI-CELULITÍCA (60 MIN)___35€<br>
+                        MASSAGEM PODAL_________________________15€<br>
+                        MASSAGEM DESPORTIVA___________________35€<br>
+                        MASSAGEM TERAPÉUTA____________________35€<br>
+                        LOCALIZAÇÃO MEMBROS <br> INFERIORES / COSTAS_______________________________________20€<br>
+                    </p>
+                </div>
+
+                <div class="col span-1-of-2 box">
+                    <h2>LIMPEZA</h2>
+                    <p class="long-copy">
+                        LIMPEZA DE PELE__________________________30€<br>
+                        PEELING DE DIAMANTE___________________35€<br>
+                        MIN FAÇIAL_________________________________20€<br>
+                    </p>
+
+                    <h2>DRENAGEM LINFATICA - MANUAL</h2>
+                    <p class="long-copy">
+                        CORPO COMPLETO________________________50€<br>
+                        MEMBROS INFERIORES____________________35€<br>
+                    </p>
+                </div>
+            </div>
+
+            <strong>
+                <h3>Serviço de Maquiagem</h3>
+            </strong>
+
+            <div class="row">
+                <div class="col span-1-of-2 box">
+                    <h2>MAQUILHAGEM</h2>
+                    <p class="long-copy">
+                        MAQUILHAGEM DIÁRIA____________________22€<br>
+                        MAQUILHAGEM DE NOITE______________26€<br>
+                        MAQUILHAGEM GLAM / FESTIVA________29€<br>
+                        MAQUILHAGEM DE NOIVA______________100€<br>
+                        PROVA DE NOIVA____________________20€<br>
+                        EXTRAS ACRESCE (PESTANAS)_____________3€<br>
+                    </p>
+                </div>
+
+                <div class="col span-1-of-2 box">
+                    <h2>WORKSHOPS</h2>
+                    <p class="long-copy">
+                        NÍVEL 1 (INICIAL BÁSICO)______________30€<br>
+                        NÍVEL 2 (INTERMÉDIO)__________________35€<br>
+                        NÍVEL 3 (AVANÇADO PRO)________________20€<br>
+                    </p>
+                </div>
+            </div>
+            <h2>INFORMAÇÕES ADICIONAIS</h2>
+            <p class="long-copy">
+                - TODOS OS SERVIÇOS DE MAQUILHAGEM (MAQUILHAGENS E WORKSHOPS) SÃO
+                ELABORADOS POR UMA PROFISSIONAL NA ÁREA, SENDO QUE DEVEM SER AGENDADOS
+                MEDIANTE A DISPONIBILIDADE DA MESMA.
+                - PARA AGENDAMENTO DO SERVIÇO SERÁ COBRADO 50% DO VALOR COMO GARANTIA
+                DE PRESENÇA, EM CASO DE DESISTÊNCIA, O VALOR NÃO SERÁ REEMBOLSADO.
+                - TODOS OS NÍVEIS DE WORKSHOP TÊM INCLUÍDO UM CERTIFICADO DE PARTICIPAÇÃO BEM
+                COMO UMA OFERTA DEDICADA À FORMANDA.
+            </p>
+
+            <strong>
+                <h3>Depilação a Laser Díodo</h3>
+            </strong>
+
+            <div class="row">
+                <div class="col span-1-of-2 box">
+                    <h2>INDIVIDUAIS</h2>
+                    <p class="long-copy">
+                        ROSTO<br>
+                        - BUÇO___________________________10€<br>
+                        - QUEIXO___________________________10€<br>
+                        - PATILHAS______________________10€<br><br>
+                        MEMBROS SUPERIORES<br>
+                        - AXILAS___________________________15€<br>
+                        - BRAÇOS___________________________20€<br>
+                        - COSTAS______________________30€<br>
+                        - PEITO______________________20€<br>
+                        - ABDÓMEN______________20€<br>
+                        VARILHAS<br>
+                        - NORMAL___________________________20€<br>
+                        - COMPLETA___________________________25€<br>
+                        MEMBROS INFERIORES<br>
+                        - MEIA PERNA___________________________25€<br>
+                        - PERNA COMPLETA_______________________35€<br>
+                        - GLÚTEOS______________________________20€<br>
+                    </p>
+                </div>
+
+                <div class="col span-1-of-2 box">
+                    <h2>PACOTES</h2>
+                    <p class="long-copy">
+                        PACOTE DE ROSTO______________25€<br>
+                        PACOTE TOTAL (CORPO INTEIRO) __________________65€<br>
+                        2 ZONAS (EXceTO ROSTO)<br>
+                        - 10€ DE DESCONTO<br>
+                        3 ZONAS (EXceTO ROSTO)<br>
+                        - 20€ DE DESCONTO<br>
+                    </p>
+                </div>
+            </div>
+            <h2>INFORMAÇÕES ADICIONAIS</h2>
+            <p class="long-copy">
+                - DEPILAÇÃO A LASER DÍODO PARA HOMENS ACRESCE 5€ A CADA VALOR TABELADO
+            </p>
+
+            <p class="xxl-margin-bottom-400 precario">
+                * Preçário Sujeito a Alteração *
+            </p>
         </div>
     </section>
 
